<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_sample"
    id="homeassistant">
    <DataType
        displayName="@string/ha_btn_1"
        description="@string/ha_btn_1_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-1" />
    <DataType
        displayName="@string/ha_btn_2"
        description="@string/ha_btn_2_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-2" />
    <DataType
        displayName="@string/ha_btn_3"
        description="@string/ha_btn_3_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-3" />
    <DataType
        displayName="@string/ha_btn_1_visual"
        description="@string/ha_btn_1_visual_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-1-visual" />
    <DataType
        displayName="@string/ha_btn_2_visual"
        description="@string/ha_btn_2_visual_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-2-visual" />
    <DataType
        displayName="@string/ha_btn_3_visual"
        description="@string/ha_btn_3_visual_desc"
        graphical="true"
        icon="@drawable/ic_sample"
        typeId="ha-btn-3-visual" />
</ExtensionInfo>
